--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
+    "gulp-imagemin": "^3.0.2",
     "gulp-react": "^3.1.0",
     "reactify": "^1.1.1"
   },
